--- a/Views/Authors/Delete.cshtml
+++ b/Views/Authors/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SoundEffect.Data.Genre
+﻿@model SoundEffect.Data.Author
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,20 +9,20 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Genre</h4>
+    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RegisteredOn)
+            @Html.DisplayNameFor(model => model.LastName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RegisteredOn)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
     </dl>
     
