--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model SoundEffect.Data.Items
+﻿@model SoundEffect.Data.Item
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/_ViewStart.cshtml";
 }
 
 <h1>Create</h1>
 
-<h4>Items</h4>
+<h4>Item</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,9 +29,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
-                <span asp-validation-for="Genre" class="text-danger"></span>
+                <label asp-for="GenreId" class="control-label"></label>
+                <input asp-for="GenreId" class="form-control" />
+                <span asp-validation-for="GenreId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Carrier" class="control-label"></label>
@@ -53,24 +54,23 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfAdding" class="control-label"></label>
-                <input asp-for="DateOfAdding" class="form-control" />
-                <span asp-validation-for="DateOfAdding" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
-                <input asp-for="AuthorId" class="form-control" />
-                <span asp-validation-for="AuthorId" class="text-danger"></span>
+                <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PictureUrl" class="control-label"></label>
                 <input asp-for="PictureUrl" class="form-control" />
                 <span asp-validation-for="PictureUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DateOfAdding" class="control-label"></label>
+                <input asp-for="DateOfAdding" class="form-control" />
+                <span asp-validation-for="DateOfAdding" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
