--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -1,13 +1,14 @@
-﻿@model SoundEffect.Data.Items
+﻿@model SoundEffect.Data.Item
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/_ViewStart.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Items</h4>
+    <h4>Item</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -23,10 +24,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Genre)
+            @Html.DisplayNameFor(model => model.GenreId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genre)
+            @Html.DisplayFor(model => model.GenreId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Carrier)
@@ -53,28 +54,28 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfAdding)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfAdding)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AuthorId)
+            @Html.DisplayNameFor(model => model.Authors)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AuthorId)
+            @Html.DisplayFor(model => model.Authors.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PictureUrl)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PictureUrl)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DateOfAdding)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DateOfAdding)
         </dd>
     </dl>
 </div>
