--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<SoundEffect.Data.Items>
+﻿@model IEnumerable<SoundEffect.Data.Item>
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/_ViewStart.cshtml";
 }
 
 <h1>Index</h1>
@@ -19,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genre)
+                @Html.DisplayNameFor(model => model.GenreId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Carrier)
@@ -34,16 +35,16 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateOfAdding)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AuthorId)
+                @Html.DisplayNameFor(model => model.Authors)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PictureUrl)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateOfAdding)
             </th>
             <th></th>
         </tr>
@@ -58,7 +59,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Genre)
+                @Html.DisplayFor(modelItem => item.GenreId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Carrier)
@@ -73,16 +74,16 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateOfAdding)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.AuthorId)
+                @Html.DisplayFor(modelItem => item.Authors.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PictureUrl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateOfAdding)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
