--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -1,9 +1,10 @@
-﻿@model SoundEffect.Data.Item
+﻿@using SoundEffect.Data;
+@model SoundEffect.Data.Item
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/_ViewStart.cshtml";
 }
+
 
 <h1>Create</h1>
 
@@ -13,11 +14,6 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="CatalogNum" class="control-label"></label>
                 <input asp-for="CatalogNum" class="form-control" />
@@ -40,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <select asp-for="Category" class="form-control"></select>
+                <select asp-for="Category" class="form-control" asp-items="@Html.GetEnumSelectList<Categories>()">  </select>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,18 +56,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
-                <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
+                <select asp-for="AuthorId" class="form-control" asp-items="ViewBag.AuthorId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PictureUrl" class="control-label"></label>
                 <input asp-for="PictureUrl" class="form-control" />
                 <span asp-validation-for="PictureUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @* <div class="form-group">
                 <label asp-for="DateOfAdding" class="control-label"></label>
                 <input asp-for="DateOfAdding" class="form-control" />
                 <span asp-validation-for="DateOfAdding" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -84,5 +80,8 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
 }
