--- a/Views/Items/Edit.cshtml
+++ b/Views/Items/Edit.cshtml
@@ -1,8 +1,8 @@
-﻿@model SoundEffect.Data.Item
+﻿@using SoundEffect.Data;
+@model SoundEffect.Data.Item
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/_ViewStart.cshtml";
 }
 
 <h1>Edit</h1>
@@ -36,8 +36,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <select asp-for="Category" class="form-control"></select>
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <select asp-for="Category" class="form-control" asp-items="@Html.GetEnumSelectList<Categories>()" > </select>
+                <span asp-validation-for="Category" class="text-danger">  </span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
@@ -64,11 +64,11 @@
                 <input asp-for="PictureUrl" class="form-control" />
                 <span asp-validation-for="PictureUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
+         @*   <div class="form-group">
                 <label asp-for="DateOfAdding" class="control-label"></label>
                 <input asp-for="DateOfAdding" class="form-control" />
                 <span asp-validation-for="DateOfAdding" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
