--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -81,6 +81,6 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
-    <a asp-controller="ShoppingCarts" asp-action="Create" asp-route-itemId="@item.Id"> Add to cart </a>
+    <a asp-controller="ShoppingCarts" asp-action="Create" asp-route-itemId="@Model.Id"> Add to cart </a>
 
 </div>
