--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,5 +14,9 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: lightgrey;
+    font-family:'Comic Sans MS';
+    font-size: 50;
+    color: black;
 }
