--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Identity;
 @inject UserManager<Client> userManager;
 @inject SignInManager<Client> signInManager;
+@*@RenderSection("Styles")*@
 <!DOCTYPE html>
 <html lang="en">
 <head>
