--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,8 +15,8 @@ html {
 
 body {
     margin-bottom: 60px;
-    background-color: lightgrey;
-    font-family:'Comic Sans MS';
+    background-color: #c98bfc;
+    font-family: 'Comic Sans MS';
     font-size: 50;
     color: black;
 }
