--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -62,10 +62,10 @@
             @Html.DisplayNameFor(model => model.Authors)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Authors.Id)
+            @Html.DisplayFor(model => model.Authors.FirstName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PictureUrl)
+            <img src="@Html.DisplayNameFor(model => model.PictureUrl)" width="200" />
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PictureUrl)
@@ -79,6 +79,7 @@
     </dl>
 </div>
 <div>
+   
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
     <a asp-controller="ShoppingCarts" asp-action="Create" asp-route-itemId="@Model.Id"> Add to cart </a>
