--- a/Views/ShoppingCarts/Details.cshtml
+++ b/Views/ShoppingCarts/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.Clients)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clients.Id)
+            @Html.DisplayFor(model => model.Clients.UserName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Items)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Items.Id)
+            @Html.DisplayFor(model => model.Items.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
