--- a/Views/ShoppingCarts/Index.cshtml
+++ b/Views/ShoppingCarts/Index.cshtml
@@ -4,44 +4,44 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<h1>Количка</h1>
+@*
 <p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
-            <th>
+          @*  <th>
                 @Html.DisplayNameFor(model => model.Clients)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Items)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
-            <th>
+         @*   <th>
                 @Html.DisplayNameFor(model => model.DateOfOrder)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Clients.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Items.Id)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
-            <td>
+       @*     <td>
                 @Html.DisplayFor(modelItem => item.DateOfOrder)
-            </td>
+            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
