--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,6 +64,8 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - SoundEffect - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <br />
+            <p>Контакти: тел. 0888443322, ул. Стара Планина, гр. Пловдив, No. 47, email: SoundEffectBulgaria@gmail.com</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
