--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -30,11 +30,25 @@
                 <img src="@Html.DisplayFor(modelItem => item.PictureUrl)" width="100" />
             </div>
 
-            <a asp-controller="Items" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
+            @if (User.IsInRole("Admin"))
+            {
+
+
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
+            }
+            else
+            {
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
+             
+                <a asp-controller="ShoppingCarts" asp-action="Create" asp-route-id="@item.Id" class="btn btn-primary">Order</a>
+            }
+          @*  <a asp-controller="Items" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
             <a asp-controller="Items" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
             <a asp-controller="Items" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a> |
             <a asp-controller="ShoppingCarts" asp-action="Create" asp-route-medicineId="@item.Id" class="btn btn-primary">Cart</a>
-
+*@
         </div>
         @*</div>*@
     </div>
