--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -11,7 +11,7 @@
 </p>
 @foreach (var item in Model)
 {
-    <div class="card" style="width:30%; height:25%; border-radius:20px; opacity:0.9; border-color:plum ">
+    <div class="card" style="width:30%; height:25%; border-radius:20px; opacity:0.9; color:rebeccapurple">
         @*<div class="row">*@
         <div class="card-body" >
             <h5 class="card-title">
